@@ -26,6 +26,10 @@ Next version (4.05.0):
   passed to the new functions are handled by the garbage collector.
   (Gabriel Scherer, review by Mark Shinwell, request by Immanuel Litzroth)
 
+- GPR#697: add hooks to monitor the activity of system threads, and
+  allow performance/memory profiling.
+  (Fabrice Le Fessant)
+
 ### Type system:
 
 - PR#6608, GPR#901: unify record types when overriding all fields
